[package]
name = "ubl-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core cryptographic kernel for UBL - deterministic hashing and signing"

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
quickcheck.workspace = true
